修证据核对对日期形同虚设、pe=0 被说成亏损、SOTP 日期错配、逐业务线丢顺序
MEDIUM-13/15 EvidenceVerifier 的文本字段在字符串不等时回落到「抽出第一个
数字比大小」，于是日期、期别这类以同一个年份开头的文本只要年份相同就判
「一致」——2026-09-17 与 2026-03-31 都抽出 2026。核对器对这类字段形同虚设，
而 AI 否决的门槛正是「≥2 条核对通过的看空证据」。改成严口径 strictNumber：
去掉千分位/货币符号/百分号后整串就是一个数才按数值比，否则按字符串比
（大小写不敏感）。数字节点那一侧照旧宽松——原值本来就是数。

MEDIUM-14 SignalPayloadBuilder 对 pe <= 0 一律写 caveat「静态市盈率为负
（亏损）」。而券商的日 K 市盈率在亏损期与基金/Trust 上给 0 不给负数，负数
只出现在估值快照——等于把一条虚假的基本面断言喂给模型，而且这条 caveat
自身是可核对的字段路径。0 与负数分开写。

MEDIUM-9 已存的 SOTP 方案回读时用「库里冻结的 asOf」配「今天的现价」：
折现期从旧基准日算起、涨跌幅却拿今天的收盘比，方案存得越久偏差越大。改成
折算到 max(asOf, 现价所属交易日)，让现值与它比较的现价属于同一天；asOf
原样留着不动用户存的东西，新增 valuedAt 字段说明本次实际折到哪天。

LOW-6 SotpCalculator 用 Map.copyOf 封装 segmentValues，把 LinkedHashMap 的
插入顺序丢了，而 ScenarioValue 的 javadoc 明写「按输入顺序」，实际顺序由
JVM 每次启动随机化的 SALT 决定。换成 unmodifiableMap(new LinkedHashMap<>)。

按规则 7 同步 docs/API.md、Postman ENDPOINTS（已重新生成，需重新导入，新增
「每套都带 valuedAt 且不早于 asOf」断言）、前端 api/valuation.ts。

反证：文本回落退回宽口径 number() → 日期那条红；换回 Map.copyOf → 顺序那条
连跑 6 轮 6 次红（单轮可能碰巧同序，要多轮才说明问题；第一次只跑一轮而且
漏了 -am，测试压根没跑就当成绿了）。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>